<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie Collection</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     <string name="label_title">Title:</string>
    <string name="label_year">Year:</string>
    <string name="label_director">Director:</string>
    <string name="label_rating">Ratings:</string>
    <string name="hint_title">title (Required)</string>
    <string name="hint_year">Year</string>
    <string name="hint_director">Director</string>
    <string name="hint_rating">Ratings</string>
     <string name="button_save_movie">Save</string>

</resources>
